.metadata/.plugins/org.eclipse.cdt.ui/DA.build.log
15:07:55 **** Incremental Build of configuration Debug for project DA ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'loop':
../Core/Src/main.c:136:15: warning: suggest parentheses around assignment used as truth value [-Wparentheses]
  136 |           if (Mode0 = 0) {
      |               ^~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:245:13: error: invalid storage class for function 'MX_I2C1_Init'
  245 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:279:13: error: invalid storage class for function 'MX_SPI1_Init'
  279 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:317:13: error: invalid storage class for function 'MX_GPIO_Init'
  317 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:498:1: error: expected declaration or statement at end of input
  498 | }
      | ^
../Core/Src/main.c: At top level:
../Core/Src/main.c:76:13: warning: 'MX_GPIO_Init' used but never defined
   76 | static void MX_GPIO_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:77:13: warning: 'MX_I2C1_Init' used but never defined
   77 | static void MX_I2C1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:78:13: warning: 'MX_SPI1_Init' used but never defined
   78 | static void MX_SPI1_Init(void);
      |             ^~~~~~~~~~~~
../Core/Src/main.c:489:6: warning: 'Error_Handler' defined but not used [-Wunused-function]
  489 | void Error_Handler(void)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:371:6: warning: 'HAL_GPIO_EXTI_Callback' defined but not used [-Wunused-function]
  371 | void HAL_GPIO_EXTI_Callback(uint16_t GPIO_Pin)
      |      ^~~~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:317:13: warning: 'MX_GPIO_Init' defined but not used [-Wunused-function]
  317 | static void MX_GPIO_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:279:13: warning: 'MX_SPI1_Init' defined but not used [-Wunused-function]
  279 | static void MX_SPI1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:245:13: warning: 'MX_I2C1_Init' defined but not used [-Wunused-function]
  245 | static void MX_I2C1_Init(void)
      |             ^~~~~~~~~~~~
../Core/Src/main.c:205:6: warning: 'SystemClock_Config' defined but not used [-Wunused-function]
  205 | void SystemClock_Config(void)
      |      ^~~~~~~~~~~~~~~~~~
../Core/Src/main.c:134:8: warning: 'loop' defined but not used [-Wunused-function]
  134 |   void loop(){
      |        ^~~~
make: *** [Core/Src/subdir.mk:40: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

15:07:55 Build Failed. 5 errors, 11 warnings. (took 309ms)

